--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,19 @@
   box-sizing: border-box;
 }
 
+:root {
+  --background-color: #fff;
+  --foreground-color: #000;
+}
+
+html {
+  /* bump up the font size */
+  font-size: 150%;
+}
+
 body {
+  background-color: var(--background-color);
+  color: var(--foreground-color);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1rem;
@@ -14,9 +26,14 @@ body {
   html {
     color-scheme: dark;
   }
-  body {
-    color: white;
-    background: black;
+
+  :root {
+    --background-color: #000;
+    --foreground-color: #fff;
+  }
+
+  .nextjs-logo {
+    background-color: #fff;
   }
 }
 
@@ -34,11 +51,11 @@ body {
 }
 
 .page * + * {
-  margin-block-start: var(--space, 1rem);
+  margin-block-start: 1rem;
 }
 
 .intro {
-  border: #000 3px dashed;
+  border: var(--foreground-color) 3px dashed;
   padding: 1rem;
 }
 
@@ -48,6 +65,6 @@ body {
 }
 
 .article {
-  border: #000 3px solid;
+  border: var(--foreground-color) 3px solid;
   padding: 1rem;
 }
